Updating docs for 33b0964

--- a/jsdoc/index.html
+++ b/jsdoc/index.html
@@ -43,21 +43,26 @@
 
 
     <section>
-        <article><h2>Overview</h2><p>The Node-RED OpenDXL contribution package enables the development of flows in
+        <article><h2 id="overview">Overview</h2>
+<p>The Node-RED OpenDXL contribution package enables the development of flows in
 <a href="https://nodered.org/">Node-RED</a> which connect to the
 <a href="http://www.mcafee.com/us/solutions/data-exchange-layer.aspx">McAfee Data Exchange Layer</a>
 messaging fabric for the purposes of sending/receiving events and
 invoking/providing services.</p>
-<h2>Installation</h2><ul>
+<h2 id="installation">Installation</h2>
+<ul>
 <li><a href="tutorial-installation.html">Library Installation</a></li>
 </ul>
-<h2>Configuration</h2><ul>
+<h2 id="configuration">Configuration</h2>
+<ul>
 <li><a href="tutorial-configuration.html">Client Configuration</a></li>
 </ul>
-<h2>Samples</h2><ul>
+<h2 id="samples">Samples</h2>
+<ul>
 <li><a href="tutorial-samples.html">Samples</a></li>
 </ul>
-<h2>JavaScript API</h2><ul>
+<h2 id="javascript-api">JavaScript API</h2>
+<ul>
 <li><a href="module-DxlClient-DxlClientNode.html">DxlClientNode</a></li>
 <li><a href="module-MessageUtils.html">MessageUtils</a></li>
 <li><a href="module-NodeUtils.html">NodeUtils</a></li>
