--- a/jsdoc/tutorial-configuration.html
+++ b/jsdoc/tutorial-configuration.html
@@ -54,7 +54,8 @@ within the edit dialog of one of the DXL nodes imported from the example.</li>
 associated with DXL nodes imported from other example flows later on. The sample
 configuration approach, therefore, may be a bit simpler for getting flows up and
 running.</p>
-<h3>Importing the Sample Configuration</h3><p>To import the <code>basic-config-example</code>, perform the following steps:</p>
+<h3 id="importing-the-sample-configuration">Importing the Sample Configuration</h3>
+<p>To import the <code>basic-config-example</code>, perform the following steps:</p>
 <ol>
 <li><p>In the upper-right corner of the Node-RED UI, press the <code>side menu</code> button. </p>
 </li>
@@ -77,7 +78,8 @@ to the DXL fabric. Change this value to the location of the
 and press the <code>Update</code> button to commit the change.</p>
 </li>
 </ol>
-<h3>Manually Creating a Configuration Node</h3><p>A DXL client configuration node can be created manually from within the edit
+<h3 id="manually-creating-a-configuration-node">Manually Creating a Configuration Node</h3>
+<p>A DXL client configuration node can be created manually from within the edit
 dialog of another DXL node. For example, you could do the following:</p>
 <ol>
 <li><p>Drag a <code>dxl event subscriber</code> node from the <code>Input</code> palette into the flow
