Updating docs for 329e94a

--- a/jsdoc/tutorial-samples.html
+++ b/jsdoc/tutorial-samples.html
@@ -40,6 +40,18 @@ Node-RED flows. To import samples into Node-RED, perform the following steps:</p
 <p>In order for the sample flows to execute properly, Node-RED must be able to
 connect to a DXL fabric. For more information on connecting to a DXL fabric
 from Node-RED, see the <a href="tutorial-configuration.html">Client Configuration</a> section.</p>
+<p>See the following sections for an overview of each sample.</p>
+<h3 id="basic-config-basic-config-example-">Basic Config (basic-config-example)</h3>
+<p>This sample includes a DXL client configuration node with no additional flow
+elements. This can be loaded in order to configure the connection parameters for
+the DXL client before any flow-based examples which use the configuration have
+been loaded. For more information, see the <a href="tutorial-configuration.html">Client Configuration</a> section.</p>
+<h3 id="basic-event-basic-event-example-">Basic Event (basic-event-example)</h3>
+<p>This sample demonstrates how to send and receive <code>Event</code> messages from the DXL
+fabric from Node-RED.</p>
+<h3 id="basic-service-basic-service-example-">Basic Service (basic-service-example)</h3>
+<p>This sample demonstrates how to register a DXL service to receive <code>Request</code>
+messages and send back <code>Response</code> messages from Node-RED.</p>
 </article>
 
 </section>
