Updating docs for 418c256

--- a/jsdoc/tutorial-installation.html
+++ b/jsdoc/tutorial-installation.html
@@ -80,8 +80,8 @@ more information.</p>
 </li>
 <li><p>Command Line Installation</p>
 <p>With this approach, the Node-RED OpenDXL contribution package is installed
-via the <a href="https://docs.npmjs.com/">npm</a> from the command-line on the host
-where the Node-RED server is running. See the
+via <a href="https://docs.npmjs.com/">npm</a> from the command-line on the host where the
+Node-RED server is running. See the
 <a href="#command-line-installation">Command Line Installation</a> section below for more
 information.</p>
 </li>
