Updating docs for 2eee6c2

--- a/jsdoc/tutorial-installation.html
+++ b/jsdoc/tutorial-installation.html
@@ -61,6 +61,8 @@ contribution package.</p>
 <li><a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/tutorial-installation.html">https://opendxl.github.io/opendxl-client-javascript/jsdoc/tutorial-installation.html</a></li>
 </ul>
 </li>
+<li><p>Node.js 4.0 or higher installed.</p>
+</li>
 </ul>
 <h3 id="installation">Installation</h3>
 <p>The Node-RED OpenDXL contribution package can be installed via the following
