Updating docs for 4c62ea6

--- a/jsdoc/tutorial-installation.html
+++ b/jsdoc/tutorial-installation.html
@@ -34,7 +34,7 @@ must be satisfied:    </p>
 <ul>
 <li><p>Node-RED must be installed.</p>
 <p>The <a href="https://github.com/opendxl/opendxl-node-red-docker">OpenDXL Node-RED Docker</a>
-repository provides instructions on how create a Node-RED container in
+repository provides instructions on how to create a Node-RED container in
 <a href="https://www.docker.com/">Docker</a>, with the Node-RED OpenDXL contribution
 package installed automatically.</p>
 <p>For more information on other Node-RED installation approaches, see
