--- a/nodes/dxl-service.html
+++ b/nodes/dxl-service.html
@@ -1,26 +1,26 @@
 <script type="text/javascript">
   (function () {
-    var payloadTypes = [
-      {v: 'txt', t: 'a UTF-8 string'},
-      {v: 'bin', t: 'a binary buffer'},
-      {v: 'obj', t: 'a parsed JSON object'}
+    const payloadTypes = [
+      { v: 'txt', t: 'a UTF-8 string' },
+      { v: 'bin', t: 'a binary buffer' },
+      { v: 'obj', t: 'a parsed JSON object' }
     ]
 
     RED.nodes.registerType('dxl-core-service', {
       category: 'dxl',
       defaults: {
-        name: {value: ''},
-        serviceType: {value: '', required: true},
-        client: {type: 'dxl-client', required: true},
-        rules: {value: [{payloadType: 'txt', topic: ''}]},
-        outputs: {value: 1}
+        name: { value: '' },
+        serviceType: { value: '', required: true },
+        client: { type: 'dxl-client', required: true },
+        rules: { value: [{ payloadType: 'txt', topic: '' }] },
+        outputs: { value: 1 }
       },
       color: '#b3d2e3',
       inputs: 0,
       outputs: 1,
       outputLabels: function (index) {
-        var label = ''
-        var rule = this.rules[index]
+        let label = ''
+        const rule = this.rules[index]
         if (rule) {
           label = rule.topic
         }
@@ -34,72 +34,72 @@
         return this.name ? 'node_label_italic' : ''
       },
       oneditprepare: function () {
-        var node = this
-        var outputCount = $('#node-input-outputs').val('{}')
+        const node = this
+        const outputCount = $('#node-input-outputs').val('{}')
 
         $('#node-input-rule-container').css('min-height', '250px').css('min-width', '450px').editableList({
           addItem: function (container, i, opt) {
-            if (!opt.hasOwnProperty('r')) {
+            if (!Object.prototype.hasOwnProperty.call(opt, 'r')) {
               opt.r = {}
             }
-            var rule = opt.r
-            if (!rule.hasOwnProperty('payloadType')) {
+            const rule = opt.r
+            if (!Object.prototype.hasOwnProperty.call(rule, 'payloadType')) {
               rule.payloadType = 'txt'
             }
-            if (!opt.hasOwnProperty('i')) {
+            if (!Object.prototype.hasOwnProperty.call(opt, 'i')) {
               opt._i = Math.floor((0x99999 - 0x10000) * Math.random()).toString(16)
             }
 
-            var row1 = $('<div/>').appendTo(container)
-            var row2 = $('<div/>', {style: 'margin-top:8px;'}).appendTo(container)
+            const row1 = $('<div/>').appendTo(container)
+            const row2 = $('<div/>', { style: 'margin-top:8px' }).appendTo(container)
 
-            $('<div/>', {style: 'display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;'})
+            $('<div/>', { style: 'display:inline-blocktext-align:right width:120px padding-right:10px box-sizing:border-box' })
               .text('Topic')
               .appendTo(row1)
-            var topicValue = $('<input/>', {class: 'node-input-rule-topic-value', type: 'text'}).appendTo(row1)
+            const topicValue = $('<input/>', { class: 'node-input-rule-topic-value', type: 'text' }).appendTo(row1)
 
-            $('<div/>', {style: 'display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;'})
+            $('<div/>', { style: 'display:inline-blocktext-align:right width:120px padding-right:10px box-sizing:border-box' })
               .text('Payload type')
               .appendTo(row2)
-            var payloadTypeField = $('<select/>', {style: 'width:200px; text-align: center;'}).appendTo(row2)
-            for (var d in payloadTypes) {
+            const payloadTypeField = $('<select/>', { style: 'width:200px text-align: center' }).appendTo(row2)
+            for (const d in payloadTypes) {
               payloadTypeField.append($('<option></option>').val(payloadTypes[d].v).text(payloadTypes[d].t))
             }
 
-            var finalspan = $('<span/>', {style: 'float: right;margin-top: 6px;'}).appendTo(row1)
-            finalspan.append(' &#8594; <span class="node-input-rule-index">' + (i + 1) + '</span> ')
+            const finalspan = $('<span/>', { style: 'float: rightmargin-top: 6px' }).appendTo(row1)
+            finalspan.append(' &#8594 <span class="node-input-rule-index">' + (i + 1) + '</span> ')
             payloadTypeField.val(rule.payloadType)
             if (typeof rule.topic !== 'undefined') {
               topicValue.val(rule.topic)
             }
             payloadTypeField.change()
 
-            var currentOutputs = JSON.parse(outputCount.val() || '{}')
-            currentOutputs[opt.hasOwnProperty('i') ? opt.i : opt._i] = i
+            const currentOutputs = JSON.parse(outputCount.val() || '{}')
+            currentOutputs[Object.prototype.hasOwnProperty.call(opt, 'i') ? opt.i : opt._i] = i
             outputCount.val(JSON.stringify(currentOutputs))
           },
           removeItem: function (opt) {
-            var currentOutputs = JSON.parse(outputCount.val() || '{}')
-            if (opt.hasOwnProperty('i')) {
+            const currentOutputs = JSON.parse(outputCount.val() || '{}')
+            if (Object.prototype.hasOwnProperty.call(opt, 'i')) {
               currentOutputs[opt.i] = -1
             } else {
               delete currentOutputs[opt._i]
             }
-            var rules = $('#node-input-rule-container').editableList('items')
+            const rules = $('#node-input-rule-container').editableList('items')
             rules.each(function (i) {
               $(this).find('.node-input-rule-index').html(i + 1)
-              var data = $(this).data('data')
-              currentOutputs[data.hasOwnProperty('i') ? data.i : data._i] = i
+              const data = $(this).data('data')
+              currentOutputs[Object.prototype.hasOwnProperty.call(data, 'i') ? data.i : data._i] = i
             })
             outputCount.val(JSON.stringify(currentOutputs))
           },
           sortItems: function () {
-            var currentOutputs = JSON.parse(outputCount.val() || '{}')
-            var rules = $('#node-input-rule-container').editableList('items')
+            const currentOutputs = JSON.parse(outputCount.val() || '{}')
+            const rules = $('#node-input-rule-container').editableList('items')
             rules.each(function (i) {
               $(this).find('.node-input-rule-index').html(i + 1)
-              var data = $(this).data('data')
-              currentOutputs[data.hasOwnProperty('i') ? data.i : data._i] = i
+              const data = $(this).data('data')
+              currentOutputs[Object.prototype.hasOwnProperty.call(data, 'i') ? data.i : data._i] = i
             })
             outputCount.val(JSON.stringify(currentOutputs))
           },
@@ -107,30 +107,30 @@
           removable: true
         })
 
-        for (var i = 0; i < node.rules.length; i++) {
-          var rule = node.rules[i]
-          $('#node-input-rule-container').editableList('addItem', {r: rule, i: i})
+        for (let i = 0; i < node.rules.length; i++) {
+          const rule = node.rules[i]
+          $('#node-input-rule-container').editableList('addItem', { r: rule, i })
         }
       },
       oneditsave: function () {
-        var rules = $('#node-input-rule-container').editableList('items')
-        var node = this
+        const rules = $('#node-input-rule-container').editableList('items')
+        const node = this
         node.rules = []
         rules.each(function () {
-          var rule = $(this)
-          var type = rule.find('select').val()
-          var r = {payloadType: type}
+          const rule = $(this)
+          const type = rule.find('select').val()
+          const r = { payloadType: type }
           r.topic = rule.find('.node-input-rule-topic-value').val()
           node.rules.push(r)
         })
       },
       oneditresize: function (size) {
-        var rows = $('#dialog-form>div:not(.node-input-rule-container-row)')
-        var height = size.height
-        for (var i = 0; i < rows.size(); i++) {
+        const rows = $('#dialog-form>div:not(.node-input-rule-container-row)')
+        let height = size.height
+        for (let i = 0; i < rows.size(); i++) {
           height -= $(rows[i]).outerHeight(true)
         }
-        var editorRow = $('#dialog-form>div.node-input-rule-container-row')
+        const editorRow = $('#dialog-form>div.node-input-rule-container-row')
         height -= (parseInt(editorRow.css('marginTop')) + parseInt(editorRow.css('marginBottom')))
         $('#node-input-rule-container').editableList('height', height)
       },
